fixed alignment of bottom items and removed dot

--- a/css/style.css
+++ b/css/style.css
@@ -5,26 +5,26 @@ html {
   box-sizing: inherit;
 }
 body {
-	/*background-color: LightGray;*/
-	font-family: 'Roboto', sans-serif;
+    /*background-color: LightGray;*/
+    font-family: 'Roboto', sans-serif;
     -webkit-font-smoothing: antialiased
     
 }
 div {
-	/*border: 1px solid Chocolate;*/
+    /*border: 1px solid Chocolate;*/
 }
 .top-navigation{
-	background-color: #fff;
-	position: fixed;
+    background-color: #fff;
+    position: fixed;
     width: 100%;
     border-bottom: 1px solid #DDD;
     z-index: 9999;
 }
 .top-navigation > .content {
-	width: 970px;
-	height: 70px;
-	margin: 0 auto;
-	padding: 0px 15px;
+    width: 970px;
+    height: 70px;
+    margin: 0 auto;
+    padding: 0px 15px;
 
 }
 .top-navigation .links {
@@ -36,13 +36,13 @@ div {
     margin-top: 25px;
 }
 .top-navigation .links li {
-	margin-left: 25px;
-	display: inline-block;
+    margin-left: 25px;
+    display: inline-block;
 }
 .top-navigation .links .active {
-	color: #4c5058;
-	font-weight: 500;
-}	
+    color: #4c5058;
+    font-weight: 500;
+}   
 .top-navigation .links li:hover {
     cursor: pointer;
     color: #333333;
@@ -70,7 +70,7 @@ div {
     font-size: 1.563rem;
 }
 button {
-	width: 9.688rem;
+    width: 9.688rem;
     background-color: #f15a29;
     border-color: #f15a29;
     text-shadow: none;
@@ -87,4 +87,93 @@ button:hover {
     background-color: #d9400e;
     border-color: #cf3d0e;
     cursor: pointer;
+}
+.cases h2 {
+    font-size: 2.75rem;
+    margin: 1.625rem 0 3.125rem;
+    font-weight: 300;
+}
+.cases {
+    background-color: #fff;
+    overflow: hidden;
+    padding-bottom: 5rem;
+}
+.cases .content {
+    margin-top: 7.875rem;
+    padding: none;
+    color: #1d1e21;
+    text-align: center;
+}
+.cases {
+    background-color: #fff;
+    overflow: hidden;
+    padding-bottom: 5rem;
+}
+.cases .content {
+    margin-top: 7.875rem;
+    padding: none;
+    color: #1d1e21;
+    text-align: center;
+}
+.cases h2 {
+    font-size: 2.75rem;
+    margin: 1.625rem 0 3.125rem;
+    font-weight: 300;
+}
+.devices {
+    list-style-type: none;
+}
+.cases .devices > li {
+    width: 33.3333333%;
+    float:left;
+}
+.cases .devices h3 {
+    font-weight: 400;
+    font-size: 1.563rem;
+    margin: 2.5rem 0px 1.875rem;
+}
+.cases .devices p {
+    font-weight: 300;
+    font-size: 1.313rem;
+}
+.social {
+    background-color: #fff;
+    overflow: auto;
+    padding-bottom: 9.375rem;
+    text-align: center;
+}
+.social hr {
+    border: 0;
+    border-top: 1px solid #eaebec;
+    margin: 1.313rem 0;
+}
+.social .icons > li {
+    border-radius: 1.25rem;
+    width: 2.5rem;
+    height: 2.5rem;
+    display: inline-block;
+    margin: 1.25rem 5px;
+    border: 1px solid #eaebec;
+    padding: 0.625rem 0;
+    text-align: center;
+}
+.social .icons > li:hover {
+    cursor: pointer;
+}
+.social .twitter {
+    color: #55acee;
+}
+.social .facebook {
+    color: #4c66a4;
+}
+.social .instagram {
+    color: #3f729b;
+}
+.social .copy {
+    font-size: 0.9rem;
+    font-weight: 300;
+    color: #838994;
+li {
+    display: list-item;
+    text-align: -webkit-match-parent;
 }
